# theta-calculator

./: .gitignore  API.md  ARCHITECTURE.md  BIBLIOGRAPHY.bib  LICENSE  PHYSICS.md  PRECALCULATED_RESULTS.md  README.md  UNIFICATION.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
theta_calculator/: __init__.py  __main__.py  cli.py  generate_results.py  requirements.txt  units.py
theta_calculator/constants/: __init__.py  codata_2022.py  connections.py  planck_units.py  values.py
theta_calculator/core/: __init__.py  interpolation.py  theta_state.py
theta_calculator/domains/: __init__.py  advanced_mathematics.py  ai_ml.py  applied_mathematics.py  atomic_optical_physics.py  category_theory.py  chemistry.py  cognition.py  cognitive_neuro.py  complex_systems.py  condensed_matter.py  control_theory.py  cosmology.py  cybersecurity.py  distributed_systems.py  economics.py  education.py  electromagnetic.py  game_theory.py  high_energy_physics.py  information.py  information_systems.py  mechanical_systems.py  networks.py  nonlinear_dynamics.py  physics_extended.py  pure_mathematics.py  quantum_biology.py  quantum_computing.py  quantum_foundations.py  quantum_gravity.py  recursive_learning.py  semantic_structure.py  signal_processing.py  social_systems.py  universal.py  ux_accessibility.py  work_life_balance.py
theta_calculator/physics/: __init__.py  black_holes.py  decoherence.py
theta_calculator/proofs/: __init__.py  unified.py
theta_calculator/tests/: __init__.py  test_advanced_mathematics.py  test_ai_ml.py  test_applied_mathematics.py  test_atomic_optical_physics.py  test_category_theory.py  test_chemistry.py  test_cognition.py  test_cognitive_neuro.py  test_complex_systems.py  test_condensed_matter.py  test_constants.py  test_control_theory.py  test_cosmology.py  test_cross_domain_proofs.py  test_cybersecurity.py  test_distributed_systems.py  test_economics.py  test_education.py  test_game_theory.py  test_high_energy_physics.py  test_proofs.py  (+22 more)
(+21 files in other folders)
